[package]
name = "expencebot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
teloxide = "0.12.2"
tokio = { version = "1.26.0", features = ["full"] }
google-sheets4 = "4.*"
serde="^1.0"
serde_json ="^1.0"